src/tests/typing/fail/dupe_var.tj
module main() = ()
    n:
        a = 0
        a = 1
    until